Combine cluster_details.yml file for all clusters
Diring deployment of clusters by using an "ocp" or "managed_openshift"
roles, a "cluster_details.yml" file was created.
Separate file for each role.

In order to ease the management and provide the ability to use any other
deployed cluster as hub, combine the both files into one single file.
The file will be generated under "logs" directory and will contain any
cluster being deployed by "ocp" and/or "managed_openshift" role.

--- a/roles/acm_import_cluster/vars/main.yml
+++ b/roles/acm_import_cluster/vars/main.yml
@@ -1,3 +1,4 @@
 ---
-ocp_assets_dir: logs/ocp_assets
-managed_openshift_dir: logs/managed_openshift
+clusters_dir:
+  - logs/ocp
+  - logs/managed_openshift
