--- a/roles/managed_openshift/tasks/aro/fetch_connection_details.yml
+++ b/roles/managed_openshift/tasks/aro/fetch_connection_details.yml
@@ -41,7 +41,7 @@
 
 - name: ARO - Write cluster details into state file
   ansible.builtin.blockinfile:
-    path: "{{ working_path }}/{{ clusters_details_file }}"
+    path: "{{ cl_details_file_path }}"
     block: |
       {{ item.name }}:
         console: {{ aro_cluster_urls.clusters.properties.consoleProfile.url }}
@@ -57,7 +57,7 @@
     msg: |
       Deployment of {{ item.name }} cluster succeeded.
 
-      Cluster connection details could be found here: {{ working_path }}/{{ clusters_details_file }}
+      Cluster connection details could be found here: {{ cl_details_file_path }}
       Cluster manifests files could be found here: {{ working_path }}/{{ item.name }}/
   ansible.builtin.set_fact:
     cl_state: "{{ cl_state | default([]) + msg.split('\n') }}"
