--- a/roles/acm_import_cluster/tasks/locate_kubeconfig_file.yml
+++ b/roles/acm_import_cluster/tasks/locate_kubeconfig_file.yml
@@ -6,9 +6,7 @@
 - name: Validate kubeconfig file existence
   ansible.builtin.stat:
     path: "{{ working_path }}/{{ dir }}/{{ item.name }}/kubeconfig"
-  loop:
-    - "{{ ocp_assets_dir }}"
-    - "{{ managed_openshift_dir }}"
+  loop: "{{ clusters_dir }}"
   loop_control:
     loop_var: dir
   register: dir_stat
