--- a/roles/managed_openshift/tasks/clusters_dirs.yml
+++ b/roles/managed_openshift/tasks/clusters_dirs.yml
@@ -21,7 +21,7 @@
 - block:
     - name: Remove clusters details from the state file
       ansible.builtin.blockinfile:
-        path: "{{ working_path }}/{{ clusters_details_file }}"
+        path: "{{ cl_details_file_path }}"
         block: ""
         marker: "#{mark} {{ item.name }} details"
         state: absent
@@ -29,12 +29,12 @@
 
     - name: Check the "{{ clusters_details_file }}" file
       ansible.builtin.stat:
-        path: "{{ working_path }}/{{ clusters_details_file }}"
+        path: "{{ cl_details_file_path }}"
       register: cl_file_state
 
     - name: Delete the "{{ clusters_details_file }}" file if empty
       ansible.builtin.file:
-        path: "{{ working_path }}/{{ clusters_details_file }}"
+        path: "{{ cl_details_file_path }}"
         state: absent
       when:
         - cl_file_state.stat.exists
