--- a/roles/managed_openshift/defaults/main.yml
+++ b/roles/managed_openshift/defaults/main.yml
@@ -4,44 +4,24 @@ state: present
 # OpenShift pull secret
 pull_secret:
 
-managed_openshift_clusters:
-  - name: cluster-aro
-    platform: aro
-    base_domain: example.com
-    credentials: aro-creds
-    region: centralus
-    network:
-      cluster: 10.128.0.0/14
-      service: 172.30.0.0/16
-    resource_group_name: <resource_group_name>
-    machines:
-      master:
-        type: Standard_D8s_v3
-      worker:
-        type: Standard_D4s_v3
-        disk_size: 128
-        count: 3
-    openshift_version: "4.11.26"
-  - name: cluster-rosa
-    platform: rosa
-    credentials: rosa-creds
-    region: us-east-2
-    network:
-      cluster: 10.128.0.0/14
-      machine: 10.0.0.0/16
-      service: 172.30.0.0/16
-    machines:
-      worker:
-        type: m5.xlarge
-        count: 3
-    openshift_version: "4.13.6"  # Optional. If not specified, will use the latest.
+# For other managed openshift clusters platforms,
+# refer to role doc and config-sample.yml file.
+# managed_openshift_clusters:
+#   - name: cluster-rosa
+#     platform: rosa
+#     credentials: rosa-creds
+#     region: us-east-2
+#     network:
+#       cluster: 10.128.0.0/14
+#       machine: 10.0.0.0/16
+#       service: 172.30.0.0/16
+#     machines:
+#       worker:
+#         type: m5.xlarge
+#         count: 3
+#     openshift_version: "4.15"
 
 managed_openshift_clusters_credentials:
-  - name: aro-creds
-    client_id: <client_id>
-    client_secret: <client_secret>
-    tenant_id: <tenant_id>
-    subscription_id: <subscription_id>
   - name: rosa-creds
     aws_access_key_id: <your_key>
     aws_secret_access_key: <your_secret_key>
